cargo-features = ["edition2024"]

[package]
name = "rust_transiter_types"
version = "0.1.7"
edition = "2024"
authors = ["Diego Aristides Marcano Aranguren"]
description = "Some generated rust types for the transiter API https://github.com/jamespfennell/transiter. Meant for no std enviromnets that have an alloc. "
repository = "https://github.com/Dmarcano/transiter_types_rust"
keywords = ["gtfs", "transiter", "transit"]
license = "MIT"

[dependencies]
prost = { version = "0.13.4", default-features = false, features = ["prost-derive"] }
serde = {version = "^1.0", features = ["derive", "alloc"], default-features = false}
serde-json-core = "^0.6"

[features]
default = ["std"] 
std = []

[build-dependencies]
tonic-build = "0.11.0"
